# prisma-rs-template

./: .gitignore  Cargo.toml  schema.prisma
examples/: basic.rs
src/: lib.rs  main.rs
