[package]
name = "prisma"
authors = ["Dr.Sabry"]
default-run = "prisma"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "prisma"
path = "src/main.rs"

[[bin]]
name = "prisma-cli"
path = "src/prisma-cli.rs"

[dependencies]
env_logger = "0.11.3"
figment = { version = "0.10.19", features = ["toml"] }
log = "0.4.22"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
